FOOTER coorectiin padding

--- a/components/solution/solution.html
+++ b/components/solution/solution.html
@@ -46,7 +46,7 @@
                 </h1>
                 <p
                     class="lg:text-[19px] text-sm opacity-80 text-black text-opacity-55 z-10 lg:leading-[30px] leading-[18px] text-justify mt-[1rem] lg:mt-5">
-                    From secure cloud applications to intelligent mobile apps and conversion-optimized designs—Spinnovix
+                    From secure cloud applications to intelligent mobile apps and conversion-optimized designs—Spinovix
                     delivers tailored tech solutions to help startups and enterprises scale, automate, and thrive in a
                     connected world. No bloat, no clutter—just results.
                 </p>
