--- a/components/solution/solution.html
+++ b/components/solution/solution.html
@@ -1397,11 +1397,11 @@
 
             <!-- Text + Button Column -->
             <div class="sec-5 w-full flex flex-col lg:gap-y-8 sm:gap-y-8 gap-y-6 items-start">
-                <p class="text-2xl lg:text-4xl lg:w-[80%] w-full text-[#afafaf] text-justify">
+                <p class="p-2 text-2xl lg:text-4xl lg:w-[80%] w-full text-[#afafaf] text-justify">
                     At <span class="text-[#2385C6]">Spinovix</span>, it’s not just about building products. It’s about
                     building success stories.
                 </p>
-                <button class="px-8 py-2 lg:h-12 h-10 w-max rounded-md text-xs lg:text-base font-medium">
+                <button class="p-2  px-8 py-2 lg:h-12 h-10 w-max rounded-md text-xs lg:text-base font-medium">
                     Book Demo
                 </button>
             </div>
