--- a/components/solution/solution.html
+++ b/components/solution/solution.html
@@ -629,7 +629,7 @@
         <h2 class='text-[20px] md:text-[36px] leading-[50px] text-center text-[#2385C6] font-bold mb-3'>Challenges</h2>
 
         <!-- Challenge Buttons - First Row (4 buttons) -->
-        <div class="challenge-buttons flex flex-row flex-wrap justify-evenly md:gap-7 mt-[2rem] md:mt-[3rem]">
+        <div class="challenge-buttons flex flex-row flex-wrap justify-evenly lg:gap-7 mt-[2rem]  ">
             <!-- Challenge 1 Button -->
             <div class="challenge-button ssc3box cursor-pointer w-[80px] md:w-[200px] h-[125px] md:h-[185px] py-1 md:py-4 rounded-lg transition-all duration-300"
                 data-target="security" data-aos="fade-down" data-aos-duration="1500">
