solution padding fix

--- a/components/solution/solution.html
+++ b/components/solution/solution.html
@@ -35,7 +35,7 @@
 
     <!-- section-1 -->
     <div
-        class="lg:h-[430px] xl:h-[670px] lg:w-full bg-cover lg:bg-center relative flex flex-col justify-center items-start p-5 lg:py-[80px] xl:py-[100px] px-4 lg:px-[96px] lg:px-[120px]">
+        class="lg:h-[430px] xl:h-[670px] lg:w-full bg-cover lg:bg-center relative flex flex-col justify-center items-start p-5 py-[50px] lg:py-[80px] xl:py-[100px] px-4 lg:px-[96px] lg:px-[120px]">
         <div class="flex flex-wrap justify-between items-center lg:flex-row flex-col">
             <div class="w-[90%] xl:w-[50%] lg:w-full" data-aos="fade-right" data-aos-duration="1500">
                 <h1 class="text-[22px] lg:text-5xl text-[black] font-bold z-10 lg:leading-[48px] leading-[30px]">
@@ -862,7 +862,7 @@
                         security into every layer—from APIs to cloud deployments—so your growth doesn't come at the cost
                         of exposure.</p>
                 </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px]">
+                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] justify-center">
                     <img src="/assets/solution-page/challenge1.jpg" class="" alt="Services Image"
                         class="h-full w-full object-cover object-center rounded-md">
                 </figure>
@@ -911,7 +911,7 @@
                         for 100 users might not work for 10,000. We build scalable, cloud-native solutions that grow as
                         you grow—no firefighting required.</p>
                 </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px]">
+                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] justify-center">
                     <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
                         class="h-full w-full object-cover object-center rounded-md">
                 </figure>
