--- a/components/solution/solution.html
+++ b/components/solution/solution.html
@@ -849,135 +849,135 @@
             </div>
         </div>
 
-        <!-- Challenge Content Boxes -->
-        <div class="challenge-boxes" data-aos="fade-up" data-aos-duration="2000">
-            <!-- Challenge 1 Box -->
-            <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
-                id="security">
-                <article class="w-full md:w-full">
-                    <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Security Gets Overlooked Until It's Too
-                        Late</h2>
-                    <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full">Many businesses focus
-                        on features, not foundations. The result? Vulnerable systems and patchwork fixes. We embed
-                        security into every layer—from APIs to cloud deployments—so your growth doesn't come at the cost
-                        of exposure.</p>
-                </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] justify-center">
-                    <img src="/assets/solution-page/challenge1.jpg" class="" alt="Services Image"
-                        class="h-full w-full object-cover object-center rounded-md">
-                </figure>
-            </div>
+<!-- Challenge Content Boxes -->
+<div class="challenge-boxes" data-aos="fade-up" data-aos-duration="2000">
+    <!-- Challenge 1 Box -->
+    <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
+        id="security">
+        <article class="w-full md:w-full">
+            <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Security Gets Overlooked Until It's Too
+                Late</h2>
+            <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full">Many businesses focus
+                on features, not foundations. The result? Vulnerable systems and patchwork fixes. We embed
+                security into every layer—from APIs to cloud deployments—so your growth doesn't come at the cost
+                of exposure.</p>
+        </article>
+        <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] justify-center flex items-center">
+            <img src="/assets/solution-page/challenge1.jpg" class="" alt="Services Image"
+                class="h-full w-full object-cover object-center rounded-md">
+        </figure>
+    </div>
 
-            <!-- Challenge 2 Box -->
-            <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
-                id="disjoint">
-                <article class="w-full md:w-full">
-                    <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Disjointed Systems That Don't Talk to Each
-                        Other</h2>
-                    <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">You've got
-                        tools, platforms, and data—but none of them play nicely together. We build and integrate
-                        seamless backend systems that streamline operations and remove the friction.</p>
-                </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px]">
-                    <img src="/assets/solution-page/challenge2.jpg" class="bg-cover" alt="Services Image"
-                        class="h-full w-full object-cover object-center rounded-md">
-                </figure>
-            </div>
+    <!-- Challenge 2 Box -->
+    <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
+        id="disjoint">
+        <article class="w-full md:w-full">
+            <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Disjointed Systems That Don't Talk to Each
+                Other</h2>
+            <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">You've got
+                tools, platforms, and data—but none of them play nicely together. We build and integrate
+                seamless backend systems that streamline operations and remove the friction.</p>
+        </article>
+        <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] flex items-center">
+            <img src="/assets/solution-page/challenge2.jpg" class="bg-cover" alt="Services Image"
+                class="h-full w-full object-cover object-center rounded-md">
+        </figure>
+    </div>
 
-            <!-- Challenge 3 Box -->
-            <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
-                id="poor-user">
-                <article class="w-full">
-                    <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Poor User Experience is Driving Users Away
-                    </h2>
-                    <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Security
-                        teams
-                        relying on agent-based solutions become dependent on dev-ops and development teams for
-                        installation
-                        and maintenance, which can lead to increased workload and friction within the organization.</p>
-                </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] bg-center">
-                    <img src="/assets/solution-page/challenge3.jpg" class="bg-cover" alt="Services Image"
-                        class="h-full w-full object-cover object-center rounded-md">
-                </figure>
-            </div>
+    <!-- Challenge 3 Box -->
+    <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
+        id="poor-user">
+        <article class="w-full">
+            <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Poor User Experience is Driving Users Away
+            </h2>
+            <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Security
+                teams
+                relying on agent-based solutions become dependent on dev-ops and development teams for
+                installation
+                and maintenance, which can lead to increased workload and friction within the organization.</p>
+        </article>
+        <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] bg-center flex items-center">
+            <img src="/assets/solution-page/challenge3.jpg" class="bg-cover" alt="Services Image"
+                class="h-full w-full object-cover object-center rounded-md">
+        </figure>
+    </div>
 
-            <!-- Challenge 4 Box -->
-            <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
-                id="scaling">
-                <article class="w-full">
-                    <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Scaling Breaks Everything</h2>
-                    <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">What works
-                        for 100 users might not work for 10,000. We build scalable, cloud-native solutions that grow as
-                        you grow—no firefighting required.</p>
-                </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] justify-center">
-                    <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
-                        class="h-full w-full object-cover object-center rounded-md">
-                </figure>
-            </div>
+    <!-- Challenge 4 Box -->
+    <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
+        id="scaling">
+        <article class="w-full">
+            <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Scaling Breaks Everything</h2>
+            <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">What works
+                for 100 users might not work for 10,000. We build scalable, cloud-native solutions that grow as
+                you grow—no firefighting required.</p>
+        </article>
+        <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] justify-center flex items-center">
+            <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
+                class="h-full w-full object-cover object-center rounded-md">
+        </figure>
+    </div>
 
-            <!-- Challenge 5 Box -->
-            <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
-                id="real-time">
-                <article class="w-full">
-                    <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Lack of Real-Time Insight into Performance
-                    </h2>
-                    <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Too many
-                        businesses are flying blind. We turn raw data into dashboards that deliver clear, real-time
-                        visibility into KPIs, user behavior, and system health.</p>
-                </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px]">
-                    <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
-                        class="h-full w-full object-cover object-center rounded-md">
-                </figure>
-            </div>
+    <!-- Challenge 5 Box -->
+    <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
+        id="real-time">
+        <article class="w-full">
+            <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Lack of Real-Time Insight into Performance
+            </h2>
+            <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Too many
+                businesses are flying blind. We turn raw data into dashboards that deliver clear, real-time
+                visibility into KPIs, user behavior, and system health.</p>
+        </article>
+        <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] flex items-center">
+            <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
+                class="h-full w-full object-cover object-center rounded-md">
+        </figure>
+    </div>
 
-            <!-- Challenge 6 Box -->
-            <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
-                id="legacy">
-                <article class="w-full">
-                    <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Legacy Systems Are Holding You Back</h2>
-                    <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Old tools and
-                        tech debt slow innovation to a crawl. Whether it's modernizing codebases or migrating to the
-                        cloud, we help you break free and move fast.</p>
-                </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px]">
-                    <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
-                        class="h-full w-full object-cover object-center rounded-md">
-                </figure>
-            </div>
+    <!-- Challenge 6 Box -->
+    <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
+        id="legacy">
+        <article class="w-full">
+            <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Legacy Systems Are Holding You Back</h2>
+            <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Old tools and
+                tech debt slow innovation to a crawl. Whether it's modernizing codebases or migrating to the
+                cloud, we help you break free and move fast.</p>
+        </article>
+        <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] flex items-center">
+            <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
+                class="h-full w-full object-cover object-center rounded-md">
+        </figure>
+    </div>
 
-            <!-- Challenge 7 Box -->
-            <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
-                id="low-brand">
-                <article class="w-full">
-                    <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Low Brand Visibility Online</h2>
-                    <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Our digital
-                        marketing strategies amplify your voice and position your brand for online success.</p>
-                </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px]">
-                    <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
-                        class="h-full w-full object-cover object-center rounded-md">
-                </figure>
-            </div>
+    <!-- Challenge 7 Box -->
+    <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
+        id="low-brand">
+        <article class="w-full">
+            <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Low Brand Visibility Online</h2>
+            <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Our digital
+                marketing strategies amplify your voice and position your brand for online success.</p>
+        </article>
+        <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] flex items-center">
+            <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
+                class="h-full w-full object-cover object-center rounded-md">
+        </figure>
+    </div>
 
-            <!-- Challenge 8 Box -->
-            <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
-                id="weak_search">
-                <article class="w-full">
-                    <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Weak Search Rankings Are Costing You Leads
-                    </h2>
-                    <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Our SEO
-                        services boost your search engine visibility, bringing qualified traffic directly to your
-                        digital doorstep.</p>
-                </article>
-                <figure class="h-[180px] w-full md:w-1/2 md:h-[270px]">
-                    <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
-                        class="h-full w-full object-cover object-center rounded-md">
-                </figure>
-            </div>
-        </div>
+    <!-- Challenge 8 Box -->
+    <div class="challenge-box Challengesbox mt-[3rem] md:mt-[4rem] h-auto md:h-[310px] flex flex-col md:flex-row justify-around items-center p-4 md:p-8 bg-white shadow-md rounded-md"
+        id="weak_search">
+        <article class="w-full">
+            <h2 class="ah2 text-[#2385C6] text-[20px] font-bold mb-2">Weak Search Rankings Are Costing You Leads
+            </h2>
+            <p class="text-[#afafaf] text-[14px] md:text-[20px] leading-relaxed md:w-full md:pr-8">Our SEO
+                services boost your search engine visibility, bringing qualified traffic directly to your
+                digital doorstep.</p>
+        </article>
+        <figure class="h-[180px] w-full md:w-1/2 md:h-[270px] flex items-center">
+            <img src="/assets/solution-page/challenge4.jpg" class="bg-cover" alt="Services Image"
+                class="h-full w-full object-cover object-center rounded-md">
+        </figure>
+    </div>
+</div>
     </section>
 
     <style>
