--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -31,7 +31,7 @@
     <special-header></special-header>
     <!-- contact page code Start here -->
     <div
-        class="sec4s py-[60px] lg:py-[80px] sm:py-[145px] lg:px-[96px] gap-[3rem] lg:gap-[150px] bg-opacity-80 rounded-lg flex flex-col lg:flex-row lg:justify-center lg:justify-center lg:p-8 overflow-x-hidden">
+        class="p-1 sec4s py-[60px] lg:py-[80px] sm:py-[145px] lg:px-[96px] gap-[3rem] lg:gap-[150px] bg-opacity-80 rounded-lg flex flex-col lg:flex-row lg:justify-center lg:p-8 overflow-x-hidden">
 
         <div class="w-full h-auto lg:w-[446px] lg:h-[549px] sm:h-[800px] flex justify-center mx-auto lg:mx-0"
             data-aos="fade-right" data-aos-duration="2000">
